Introduction of audiveris-commons at root level